fixed nav vs modal Overflow

--- a/basic.css
+++ b/basic.css
@@ -3,7 +3,6 @@ html, body {
     padding: 0;
     font-family: 'Lucida Grande', serif;
     overflow-x: hidden;
-    height: 100%;
 }
 
 * {
