--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ nav {
     background: #83acff;
     top: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 3;
     font-family: 'Lucida Grande', sans-serif;
     position: fixed;
     box-shadow: 0px 0px 15px #c6c6c6;
@@ -418,7 +418,7 @@ button::-moz-focus-inner {
 .modal {
     display: none; 
     position: fixed; 
-    z-index: 2; 
+    z-index: 9; 
     padding-top: 10%; 
     left: 0;
     top: 0;
